--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,20 @@ services:
   - docker
 
 before_install:
-  - docker build -t react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t hakunamatata007/react-test -f ./client/Dockerfile.dev ./client
 
 scripts:
   - docker run -e CI=true react-test npm test
 
 after_success:
-  - docker build -t multi-client ./client
-  - docker build -t multi-nginx ./nginx
-  - docker build -t multi-server ./server
-  - docker build -t multi-worker ./worker
+  - docker build -t hakunamatata007/multi-client ./client
+  - docker build -t hakunamatata007/multi-nginx ./nginx
+  - docker build -t hakunamatata007/multi-server ./server
+  - docker build -t hakunamatata007/multi-worker ./worker
   # login to the docker cli
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Push images to docker hub
-  - docker push multi-client
-  - docker push multi-server
-  - docker push multi-nginx
-  - docker push multi-worker
+  - docker push hakunamatata007/multi-client
+  - docker push hakunamatata007/multi-server
+  - docker push hakunamatata007/multi-nginx
+  - docker push hakunamatata007/multi-worker
