--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t hakunamatata007/react-test -f ./client/Dockerfile.dev ./client
 
 scripts:
-  - docker run -e CI=true react-test npm test
+  - docker run -e CI=true hakunamatata007/react-test npm test
 
 after_success:
   - docker build -t hakunamatata007/multi-client ./client
