--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,12 @@ after_success:
   - docker push hakunamatata007/multi-server
   - docker push hakunamatata007/multi-worker
 
+echo ----------------
+echo ENV VAariables
+echo ACCESS KEY -  $AWS_ACCESS_KEY
+echo SECRET KEY - $AWS_SECRET_KEY
+echo -----------------------------
+
 deploy:
   provider: elasticbeanstalk
   region: us-east-1
@@ -31,6 +37,6 @@ deploy:
   on:
     branch: master
   access_key_id:
-    secure: AKIA4RGIPUR74I2QIXYF
+    secure: $AWS_ACCESS_KEY
   secret_access_key:
-    secure: 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
+    secure: $AWS_SECRET_KEY
