--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ before_install:
 
 scripts:
   - docker run -e CI=true hakunamatata007/react-test npm test
+  - echo $AWS_ACCESS_KEY
+  - echo $AWS_SECRET_KEY
 
 after_success:
   - docker build -t hakunamatata007/multi-client ./client
@@ -20,12 +22,6 @@ after_success:
   - docker push hakunamatata007/multi-nginx
   - docker push hakunamatata007/multi-server
   - docker push hakunamatata007/multi-worker
-
-echo ----------------
-echo ENV VAariables
-echo "$AWS_ACCESS_KEY"
-echo "$AWS_SECRET_KEY"
-echo -----------------------------
 
 deploy:
   provider: elasticbeanstalk
