--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ services:
 
 env:
   global:
-    - access_key_id:
+    - access_key:
         secure: AKIAIQFWGL67KIENPLMA
-    - secret_access_key:
+    - secret_key:
         secure: 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
 
 before_install:
@@ -37,5 +37,5 @@ deploy:
   bucket_path: multi-docker
   on:
     branch: master
-  access_key_id: env.access_key_id
-  secret_access_key: env.secret_access_key
+  access_key_id: ${access_key}
+  secret_access_key: ${secret_key}
