--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,7 @@ deploy:
   bucket_path: multi-docker
   on:
     branch: master
-  access_key_id: $ACCESS_KEY
-  secret_access_key: $SECRET_KEY
+  access_key_id:
+    secure: $ACCESS_KEY
+  secret_access_key:
+    secure: $SECRET_KEY
