--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,11 @@ sudo: required
 services:
   - docker
 
-env:
-  global:
-    - access_key:
-        secure: AKIAIQFWGL67KIENPLMA
-    - secret_key:
-        secure: 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
-
 before_install:
-  - docker build -t hakunamatata007/react-test -f ./client/Dockerfile.dev ./client
+ # - docker build -t hakunamatata007/react-test -f ./client/Dockerfile.dev ./client
 
 scripts:
-  - docker run -e CI=true hakunamatata007/react-test npm test
+#  - docker run -e CI=true hakunamatata007/react-test npm test
 
 after_success:
   - docker build -t hakunamatata007/multi-client ./client
@@ -37,5 +30,7 @@ deploy:
   bucket_path: docker
   on:
     branch: master
-  access_key_id: $ACCESS_KEY
-  secret_access_key: $SECRET_KEY
+  access_key_id:
+    secure: $ACCESS_KEY
+  secret_access_key:
+    secure: $SECRET_KEY
