--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ scripts:
 
 after_success:
   - echo DEPLOYMENT ----------------
-  - echo $(AWS_SECRET_KEY_ROOT)
+  - echo ${AWS_SECRET_KEY_ROOT}
   - docker build -t hakunamatata007/multi-client ./client
   #- docker build -t hakunamatata007/multi-nginx ./nginx
   #- docker build -t hakunamatata007/multi-server ./server
@@ -34,4 +34,4 @@ deploy:
     branch: master
   access_key_id: AKIAIAMJHRZZRFKP6M7Q
   secret_access_key:
-    secure: $AWS_SECRET_KEY_ROOT
+    secure: ${AWS_SECRET_KEY_ROOT}
