--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,16 @@ scripts:
 
 after_success:
   - docker build -t hakunamatata007/multi-client ./client
-  #- docker build -t hakunamatata007/multi-nginx ./nginx
-  #- docker build -t hakunamatata007/multi-server ./server
-  #- docker build -t hakunamatata007/multi-worker ./worker
+  - docker build -t hakunamatata007/multi-nginx ./nginx
+  - docker build -t hakunamatata007/multi-server ./server
+  - docker build -t hakunamatata007/multi-worker ./worker
   # login to the docker cli
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Push images to docker hub
   - docker push hakunamatata007/multi-client
-  #- docker push hakunamatata007/multi-nginx
-  #- docker push hakunamatata007/multi-server
-  #- docker push hakunamatata007/multi-worker
+  - docker push hakunamatata007/multi-nginx
+  - docker push hakunamatata007/multi-server
+  - docker push hakunamatata007/multi-worker
 
 deploy:
   provider: elasticbeanstalk
@@ -30,6 +30,7 @@ deploy:
   bucket_path: docker
   on:
     branch: master
-  access_key_id: AKIA4RGIPUR72MIDIVV6
+  access_key_id:
+    secure: $ACCESS_KEY
   secret_access_key:
-    secure: $AWS_SECRET_KEY
+    secure: $SECRET_KEY
