--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,6 @@ deploy:
   on:
     branch: master
   access_key_id:
-    secure: $ACCESS_KEY
+    secure: 'AKIA4RGIPUR72MIDIVV6'
   secret_access_key:
-    secure: $SECRET_KEY
+    secure: $AWS_SECRET_KEY
