--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,4 @@ deploy:
   access_key_id:
     secure: 'AKIA4RGIPUR72MIDIVV6'
   secret_access_key:
-    secure: $AWS_SECRET_KEY
+    secure: "$AWS_SECRET_KEY"
