--- a/simplek8s/client-deployment.yaml
+++ b/simplek8s/client-deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: client-deployment
+  name: client-deployment #name of the configuration
 spec:
-  replicas: 3
+  replicas: 1 #no of identical pods
   selector:
     matchLabels:
       component: web
